Added FTP Service

--- a/modules/ledger/templates/debts.html
+++ b/modules/ledger/templates/debts.html
@@ -15,6 +15,7 @@
         <a href="/ledger">Accounts</a>
         <a href="/ledger/planning">Financial Planning</a>
         <a href="/ledger/debts" class="active">Debts</a>
+        <a href="/ledger/invoices"></a>
     </nav>
 </aside>
 
