--- a/modules/ledger/templates/ledger.html
+++ b/modules/ledger/templates/ledger.html
@@ -16,6 +16,7 @@
       <a href="/ledger" class="active">Accounts</a>
       <a href="/ledger/planning">Financial Planning</a>
       <a href="/ledger/debts">Debts</a>
+      <a href="/ledger/invoices">Invoices</a>
     </nav>
   </aside>
 
