--- a/modules/ledger/templates/planning.html
+++ b/modules/ledger/templates/planning.html
@@ -16,6 +16,7 @@
         <a href="/ledger">Accounts</a>
         <a href="/ledger/planning" class="active">Financial Planning</a>
         <a href="/ledger/debts">Debts</a>
+        <a href="/ledger/invoices">Invoices</a>
     </nav>
 </aside>
 
