--- a/modules/browser/templates/index.html
+++ b/modules/browser/templates/index.html
@@ -54,6 +54,11 @@
           <div class="app-name">Ledger</div>
         </a>
 
+        <a href="/dianetics"    class="app-card" role="listitem" aria-label="Open Dianetics" tabindex="0">
+          <div class="app-icon"><img src="/static/browser/icons/dianetics.svg" alt="" aria-hidden="true" /></div>
+          <div class="app-name">Dianetics</div>
+        </a>
+
         <a href="/battleplans" class="app-card" role="listitem" aria-label="Open Battle Plans" tabindex="0">
           <div class="app-icon"><img src="/static/browser/icons/battleplans.svg" alt="" aria-hidden="true" /></div>
           <div class="app-name">Battle Plans</div>
