--- a/modules/files/templates/index.html
+++ b/modules/files/templates/index.html
@@ -40,5 +40,6 @@
 
   <script src="/static/files/js/people_manage.js"></script>
   <script src="/static/files/js/filter_names.js"></script>
+  <script src="/static/files/js/themecontrol.js"></script>
 </body>
 </html>
