Made Items in Invoice stack

--- a/modules/ledger/templates/invoices.html
+++ b/modules/ledger/templates/invoices.html
@@ -39,11 +39,12 @@
     <div class="invoice-wrapper">
       <table id="invoice-table">
         <thead>
-          <tr>
-            <th>Item</th>
-            <th>Value</th>
-            <th>Remove</th>
-          </tr>
+        <tr>
+          <th>Item</th>
+          <th>Qty</th>
+          <th>Value</th>
+          <th>Remove</th>
+        </tr>
         </thead>
         <tbody></tbody>
         <tfoot>
