Added Multi-File / Folder upload to FTP

--- a/modules/ftp/templates/ftp.html
+++ b/modules/ftp/templates/ftp.html
@@ -21,7 +21,7 @@
     <h2>Drag & Drop Files Here</h2>
     <p>or click the button below to browse files</p>
     <button onclick="fileInput.click()">Browse Files</button>
-    <input type="file" id="file-input" multiple>
+    <input type="file" id="file-input" multiple webkitdirectory>
   </div>
 
   <div class="file-grid" id="file-grid"></div>
