--- a/modules/browser/templates/index.html
+++ b/modules/browser/templates/index.html
@@ -69,7 +69,11 @@
           <div class="app-name">FTP Server</div>
         </a>
 
-        <!-- Example of additional card to show responsiveness -->
+        <a href="/auth"  class="app-card muted" role="listitem" aria-label="Open Auth and Permissions Page" tabindex="0">
+          <div class="app-icon"><img src="/static/browser/icons/auth.svg" alt="" aria-hidden="true" /></div>
+          <div class="app-name">Auth Permissions</div>
+        </a>
+
         <a href="/settings"  class="app-card muted" role="listitem" aria-label="Open Settings" tabindex="0">
           <div class="app-icon"><img src="/static/browser/icons/settings.svg" alt="" aria-hidden="true" /></div>
           <div class="app-name">Settings</div>
