--- a/modules/files/templates/profile.html
+++ b/modules/files/templates/profile.html
@@ -70,7 +70,7 @@
     <div class="grid-box">
       <div class="field">
         <label>Last Action?</label>
-        <span id="field-last_action" class="editable" onclick="makeEditable('field-last_action', '{{ profile.cfid }}')">{{ dianetics.last_action }}</span>
+        <span id="field-last_action">{{ dianetics.last_action }}</span>
       </div>
       <div class="field">
         <label>Is Sonic Shut-off?</label>
