--- a/modules/settings/templates/settings.html
+++ b/modules/settings/templates/settings.html
@@ -11,7 +11,7 @@
 
 	<main id="config-container">
 		<div class="config-card">
-			<label for="weekday-start">Weekday Start</label>
+			<label for="weekday-start">When should the app consider it a new week?</label>
 			<select id="weekday-start" data-config-name="weekday_start">
 				<option value="monday" selected>Monday</option>
 				<option value="tuesday">Tuesday</option>
@@ -23,11 +23,15 @@
 			</select>
 		</div>
 		<div class="config-card">
-			<label for="registration-allowed">Allow New Users</label>
+			<label for="registration-allowed">For Registering;<br>Do we allow new users?</label>
 			<input type="checkbox" id="registration-allowed" data-config-name="registration_allowed">
 		</div>
 		<div class="config-card">
-			<label for="lookback-length">On the ledger, how far back do we load finances in days?</label>
+			<label for="new_week_stats_plan">For BattlePlans;<br>Should every week have a new planned production statistic?</label>
+			<input type="checkbox" id="new_week_stats_plan" data-config-name="new_week_stats_plan">
+		</div>
+		<div class="config-card">
+			<label for="lookback-length">On the ledger;<br>How far back do we load finances in days?</label>
 			<input type="number" id="lookback-length" data-config-name="looback_length">
 		</div>
 		<button class="save-btn" onclick="saveConfig()">Save Settings</button>
