Reorganised BP Code and Fixed perms errors
Additionally, bug fixes.

--- a/modules/battleplans/templates/battleplans.html
+++ b/modules/battleplans/templates/battleplans.html
@@ -40,7 +40,6 @@
       <div id="quota-list">
         <!-- Multiple quota entries will be dynamically added by JS -->
       </div>
-      <span id="quota-status">Production over last 7 days: </span>
     </div>
 
     <!-- New task form -->
@@ -99,12 +98,11 @@
       <h3>Why "Battle plan"?</h3>
       <p>
         The term originates from Scientology text, "Battle Plans" by L. Ron Hubbard.
-        The name comes from the idea of "battling" the day to get it all done.
+        The name comes from the idea of "battling" the day to get it all done. Though, I'm uncertain of that derivation.
       </p>
       <h3>Must I use the quotas?</h3>
       <p>
-        No, but it can be useful. You can add quota entries to track your daily metrics,
-        for example "Complete all 7 tasks today".
+        No, but it can be useful. I personally don't see why not, at least.
       </p>
       <button id="bp-help-close">Close</button>
     </div>
@@ -143,6 +141,13 @@
   </div>
   <!-- JS -->
   <script src="/static/register/js/toast.js"></script>
+  <script src="/static/battleplans/js/helpers.js"></script>
+  <script src="/static/battleplans/js/navigation.js"></script>
   <script src="/static/battleplans/js/battleplans.js"></script>
+  <script src="/static/battleplans/js/quotas.js"></script>
+  <script src="/static/battleplans/js/tasks.js"></script>
+  <script src="/static/battleplans/js/modals.js"></script>
+  <script src="/static/battleplans/js/controls.js"></script>
+  <script src="/static/battleplans/js/pdfs.js"></script>
 </body>
 </html>
