--- a/modules/settings/templates/settings.html
+++ b/modules/settings/templates/settings.html
@@ -11,8 +11,8 @@
 
 	<main id="config-container">
 		<div class="config-card">
-			<label for="weekday-start">When should the app consider it a new week?</label>
-			<select id="weekday-start" data-config-name="weekday_start">
+			<label for="weekday-end">When should the app consider it a new week?</label>
+			<select id="weekday-end" data-config-name="weekday-end">
 				<option value="monday" selected>Monday</option>
 				<option value="tuesday">Tuesday</option>
 				<option value="wednesday">Wednesday</option>
