Added signal server

--- a/modules/browser/templates/index.html
+++ b/modules/browser/templates/index.html
@@ -69,6 +69,11 @@
           <div class="app-name">FTP Server</div>
         </a>
 
+        <a href="/signals"  class="app-card muted" role="listitem" aria-label="Open Settings" tabindex="0">
+          <div class="app-icon"><img src="/static/browser/icons/signals.svg" alt="" aria-hidden="true" /></div>
+          <div class="app-name">Signal Server</div>
+        </a>
+
         <a href="/auth"  class="app-card muted" role="listitem" aria-label="Open Auth and Permissions Page" tabindex="0">
           <div class="app-icon"><img src="/static/browser/icons/auth.svg" alt="" aria-hidden="true" /></div>
           <div class="app-name">Auth Permissions</div>
