Big CF Overhaul

--- a/modules/browser/templates/index.html
+++ b/modules/browser/templates/index.html
@@ -39,9 +39,9 @@
           <div class="app-name">Central Files</div>
         </a>
 
-        <a href="/archives"  class="app-card" role="listitem" aria-label="Open Bulletin" tabindex="0">
+        <a href="/textbook"  class="app-card" role="listitem" aria-label="Open Bulletin" tabindex="0">
           <div class="app-icon"><img src="/static/browser/icons/archives.svg" alt="" aria-hidden="true" /></div>
-          <div class="app-name">Bulletin</div>
+          <div class="app-name">Textbook</div>
         </a>
 
         <a href="/logs"      class="app-card" role="listitem" aria-label="Open App Logs" tabindex="0">
