--- a/modules/dianetics/templates/dianometry_profile.html
+++ b/modules/dianetics/templates/dianometry_profile.html
@@ -17,6 +17,7 @@
         <a href="/"> ⬅️ Go Back</a>
         <a href="/dianetics">Preclears</a>
         <a href="/dianetics/dianometry/{{ preclear.cfid }}" class="active">{{ preclear.name }}'s Dianometry</a>
+        <a href="/sessionlogs">Session Logs</a>
     </nav>
 </aside>
 
