--- a/modules/dianetics/templates/dianetics.html
+++ b/modules/dianetics/templates/dianetics.html
@@ -16,6 +16,7 @@
     <nav class="nav">
         <a href="/"> ⬅️ Go Back</a>
         <a href="/dianetics" class="active">Preclears</a>
+        <a href="/sessionlogs">Session Logs</a>
     </nav>
 </aside>
 
