--- a/modules/dianetics/templates/dianometry_profile.html
+++ b/modules/dianetics/templates/dianometry_profile.html
@@ -35,9 +35,9 @@
             <label for="dynamic-self">Self:</label>
             <select id="dynamic-self">
                 <option value="0">Undecided</option>
-                <option value="1">Short</option>
+                <option value="1">Weak</option>
                 <option value="2">Medium</option>
-                <option value="3">Long</option>
+                <option value="3">Strong</option>
             </select>
         </div>
 
@@ -45,9 +45,9 @@
             <label for="dynamic-sex-family">Sex and Family:</label>
             <select id="dynamic-sex-family">
                 <option value="0">Undecided</option>
-                <option value="1">Short</option>
+                <option value="1">Weak</option>
                 <option value="2">Medium</option>
-                <option value="3">Long</option>
+                <option value="3">Strong</option>
             </select>
         </div>
 
@@ -55,9 +55,9 @@
             <label for="dynamic-groups">Groups:</label>
             <select id="dynamic-groups">
                 <option value="0">Undecided</option>
-                <option value="1">Short</option>
+                <option value="1">Weak</option>
                 <option value="2">Medium</option>
-                <option value="3">Long</option>
+                <option value="3">Strong</option>
             </select>
         </div>
 
@@ -65,9 +65,9 @@
             <label for="dynamic-mankind">Mankind:</label>
             <select id="dynamic-mankind">
                 <option value="0">Undecided</option>
-                <option value="1">Short</option>
+                <option value="1">Weak</option>
                 <option value="2">Medium</option>
-                <option value="3">Long</option>
+                <option value="3">Strong</option>
             </select>
         </div>
     </div>
